// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils / DTO / Meta / Post / Story audiobook shall match snapshot 1`] = `
DTOMetaPostStory {
  "audiobookId": "123456",
  "createdAt": 2021-11-01T00:00:00.000Z,
  "description": "Test Description",
  "imageCover": "/images/opowiadania/image-cover.webp",
  "imageCover2x": "/images/opowiadania/image-cover.2x.webp",
  "imageOpenGraph": "/images/opowiadania/image-open-graph.png",
  "path": "/test-url/",
  "timeReading": 2,
  "title": "Test title",
  "updatedAt": 2021-11-01T00:00:00.000Z,
}
`;

exports[`Utils / DTO / Meta / Post / Story no audiobook shall match snapshot 1`] = `
DTOMetaPostStory {
  "audiobookId": "0",
  "createdAt": 2021-11-01T00:00:00.000Z,
  "description": "Test Description",
  "imageCover": "/images/opowiadania/image-cover.webp",
  "imageCover2x": "/images/opowiadania/image-cover.2x.webp",
  "imageOpenGraph": "/images/opowiadania/image-open-graph.png",
  "path": "/test-url/",
  "timeReading": 2,
  "title": "Test title",
  "updatedAt": 2021-11-01T00:00:00.000Z,
}
`;
